# mogo

./: .gitignore  README.md  main.py  pyproject.toml
mogo/: cli.py  go.mod
