[tool.poetry]
name = "mogo"
version = "0.1.0"
description = "CLI tool to handle Golang dependency management."
authors = ["Rishikesh Jagadale"]

# Add the following
packages = [
    { include = "mogo" }
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2"
typer = "^0.4"
rich = "^10.16"
